tests/paczka1/fuzzy1/80234717.err
Error in line 5: Ak00g8SS6B S35, 3,6
Error in line 3: Ak00g8SS6B S354 2,3
Error in line 12: Ak00g8SS6B S73 20,0
Error in line 10: ZTL1K1LTL S354 7,7
Error in line 22: ZTL1K1LTL S73 57,0
